trunk/Archive2/78/2d44eaab138760/output
main.cpp:1:11: error: function cannot return array type 'double []'
double foo()[] { 
          ^
1 error generated.
